--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sai_currency_converter",
-  "version": "1.0.0",
+  "version": "2.2.0",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -12,6 +12,7 @@
   "author": "Saira Asif",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^5.3.0",
     "inquirer": "^9.2.17"
   },
   "devDependencies": {
